--- a/algoexpert.html
+++ b/algoexpert.html
@@ -6,11 +6,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script/Range.js"></script>
     <script src="script/TreeNode.js"></script>
-    <script src="script/BST.js"></script>
-    <script src="script/bstScript.js"></script>
+    <script src="script/AlgoExpertTree.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <style>
+        #input {
+            width: 100%;
+            height: 250px;
+            resize: none;
+            font-size: 25px;
+            background: #012548;
+            color: white;
+        }
+    </style>
 </head>
 <body style="background-color: #012548; color: white" onload="setup();">
 
@@ -23,19 +32,17 @@
         <li class="nav-item">
             <a class="nav-link" href="codeToTree.html">Code-To-Tree</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="bst.html">BST</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
             <a class="nav-link" href="algoexpert.html">AlgoExpert Tree</a>
         </li>
     </ul>
 </nav>
 
-<textarea id="input" style="width: 100%; height: 50px; resize: none; font-size: 25px; "></textarea>
-<br> <br>
-<button type="button" id="randomBtn" class="btn btn-success" onclick="randomBST()">Random BST</button>
-<br> <br>
+<textarea id="input"></textarea>
+<br>
 
 <div style="text-align: right;">
     <canvas id="canvas"
