--- a/codeToTree.html
+++ b/codeToTree.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="bst.html">BST</a>
             </li>
+            <li class="nav-item">
+            <a class="nav-link" href="algoexpert.html">AlgoExpert Tree</a>
+        </li>
         </ul>
     </nav>
 
