--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
+    <style>
+        #input {
+            width: 100%;
+            height: 80px;
+            resize: none;
+            font-size: 25px;
+            background: #012548;
+            color: white;
+        }
+    </style>
+
 </head>
 <body style="background-color: #012548; color: white" onload="setup()">
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -25,11 +36,13 @@
         <li class="nav-item">
             <a class="nav-link" href="bst.html">BST</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="algoexpert.html">AlgoExpert Tree</a>
+        </li>
     </ul>
 </nav>
 
-<textarea id="input" style="width: 100%; height: 50px; resize: none; font-size: 25px;"></textarea>
-    <br><br>
+<textarea id="input"></textarea>
     <div style="text-align: center;">
         <canvas id="canvas"
                 width="600"
