--- a/algoexpert.html
+++ b/algoexpert.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="bst.html">BST</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="algoexpert.html">AlgoExpert Tree</a>
+            <a class="nav-link" href="algoexpert.html">AlgoExpert-Tree</a>
         </li>
     </ul>
 </nav>
