--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="bst.html">BST</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="algoexpert.html">AlgoExpert Tree</a>
+            <a class="nav-link" href="algoexpert.html">AlgoExpert-Tree</a>
         </li>
     </ul>
 </nav>
