--- a/avl.html
+++ b/avl.html
@@ -6,8 +6,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script/Range.js"></script>
     <script src="script/TreeNode.js"></script>
-    <script src="script/BST.js"></script>
-    <script src="script/bstScript.js"></script>
+    <script src="script/AVL.js"></script>
+    <script src="script/avlScript.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -23,10 +23,10 @@
         <li class="nav-item">
             <a class="nav-link" href="codeToTree.html">Code-To-Tree</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="bst.html">BST</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
             <a class="nav-link" href="avl.html">AVL Tree</a>
         </li>
         <li class="nav-item">
@@ -37,7 +37,7 @@
 
 <textarea id="input" style="width: 100%; height: 50px; resize: none; font-size: 25px; "></textarea>
 <br> <br>
-<button type="button" id="randomBtn" class="btn btn-success" onclick="randomBST()">Random BST</button>
+<button type="button" id="randomBtn" class="btn btn-success" onclick="randomAVL()">Random AVL Tree</button>
 <br> <br>
 
 <div style="text-align: right;">
