--- a/codeToTree.html
+++ b/codeToTree.html
@@ -28,7 +28,10 @@
                 <a class="nav-link" href="bst.html">BST</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="algoexpert.html">AlgoExpert-Tree</a>
+                <a class="nav-link" href="avl.html">AVL Tree</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="algoexpert.html">AlgoExpert Tree</a>
         </li>
         </ul>
     </nav>
@@ -45,7 +48,7 @@
 
     <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
         <div class="container text-right">
-            <a href="https://github.com/knyl2013/knyl2013.github.io"><small><img src="img/github.png" style="width: 40px; height: 40px;"/></small></a>
+            <a href="https://github.com/knyl2013/Javascript-Binary-Tree-Visualizer"><small><img src="img/github.png" style="width: 40px; height: 40px;"/></small></a>
 
         </div>
         </div>
