--- a/bst.html
+++ b/bst.html
@@ -37,7 +37,8 @@
 
 <textarea id="input" style="width: 100%; height: 50px; resize: none; font-size: 25px; "></textarea>
 <br> <br>
-<button type="button" id="randomBtn" class="btn btn-success" onclick="randomBST()">Random BST</button>
+Size: <input id="size" type="number" value="3"/>
+<button type="button" id="randomBtn" class="btn btn-success" onclick="randomBST()">Get Random BST</button>
 <br> <br>
 
 <div style="text-align: right;">
