--- a/algoexpert.html
+++ b/algoexpert.html
@@ -7,6 +7,7 @@
     <script src="script/Range.js"></script>
     <script src="script/TreeNode.js"></script>
     <script src="script/AlgoExpertTree.js"></script>
+    <script src="script/zoom.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -45,6 +46,9 @@
 </nav>
 
 <textarea id="input"></textarea>
+<br>
+<br>
+Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button>
 <br>
 
 <div style="text-align: right;">
