--- a/bst.html
+++ b/bst.html
@@ -8,9 +8,13 @@
     <script src="script/TreeNode.js"></script>
     <script src="script/BST.js"></script>
     <script src="script/bstScript.js"></script>
+    <script src="script/zoom.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <style>
+        table {width: 100%;}
+    </style>
 </head>
 <body style="background-color: #012548; color: white" onload="setup();">
 
@@ -37,9 +41,14 @@
 
 <textarea id="input" style="width: 100%; height: 50px; resize: none; font-size: 25px; "></textarea>
 <br> <br>
-Size: <input id="size" type="number" value="3"/>
-<button type="button" id="randomBtn" class="btn btn-success" onclick="randomBST()">Get Random BST</button>
-<br> <br>
+<table>
+    <tr>   
+        <td>
+            <div style="float:left">Size: <input id="size" type="number" value="3"/> <button type="button" id="randomBtn" class="btn btn-success" onclick="randomBST()">Get Random BST</button></div>
+            <div style="float:right">Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button></div>
+        </td>
+    </tr>
+</table>
 
 <div style="text-align: right;">
     <canvas id="canvas"
