--- a/codeToTree.html
+++ b/codeToTree.html
@@ -11,6 +11,7 @@
     <script src="script/codeToTree.js"></script>
     <script src="script/Range.js"></script>
     <script src="script/TreeNode.js"></script>
+    <script src="script/zoom.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
