--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script/index.js"></script>
     <script src="script/Range.js"></script>
     <script src="script/TreeNode.js"></script>
+    <script src="script/zoom.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -44,8 +45,9 @@
         </li>
     </ul>
 </nav>
-
 <textarea id="input"></textarea>
+<br><br>
+Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button>
     <div style="text-align: center;">
         <canvas id="canvas"
                 width="600"
