--- a/algoexpert.html
+++ b/algoexpert.html
@@ -60,7 +60,7 @@ Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" t
 
 <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
     <div class="container text-right">
-        <a href="https://github.com/knyl2013/Javascript-Binary-Tree-Visualizer"><small><img src="img/github.png" style="width: 40px; height: 40px;"/></small></a>
+        <a href="https://github.com/knyl2013/knyl2013.github.io"><small><img src="img/github.png" style="width: 40px; height: 40px;"/></small></a>
 
     </div>
     </div>
