Fix random size <= 1 bug

--- a/bst.html
+++ b/bst.html
@@ -44,7 +44,7 @@
 <table>
     <tr>   
         <td>
-            <div style="float:left">Size: <input id="size" type="number" value="3"/> <button type="button" id="randomBtn" class="btn btn-success" onclick="randomBST()">Get Random BST</button></div>
+            <div style="float:left">Size: <input id="size" type="number" value="3" min="1"/> <button type="button" id="randomBtn" class="btn btn-success" onclick="randomBST()">Get Random BST</button></div>
             <div style="float:right">Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button></div>
         </td>
     </tr>
