--- a/avl.html
+++ b/avl.html
@@ -44,7 +44,7 @@
 <table>
     <tr>   
         <td>
-            <div style="float:left">Size: <input id="size" type="number" value="3"/> <button type="button" id="randomBtn" class="btn btn-success" onclick="randomAVL()">Get Random AVL Tree</button></div>
+            <div style="float:left">Size: <input id="size" type="number" value="3" min="1" /> <button type="button" id="randomBtn" class="btn btn-success" onclick="randomAVL()">Get Random AVL Tree</button></div>
             <div style="float:right">Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button></div>
         </td>
     </tr>
