Refactor tab names

--- a/avl.html
+++ b/avl.html
@@ -31,10 +31,10 @@
             <a class="nav-link" href="bst.html">BST</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="avl.html">AVL Tree</a>
+            <a class="nav-link" href="avl.html">AVL-Tree</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="algoexpert.html">AlgoExpert Tree</a>
+            <a class="nav-link" href="algoexpert.html">AlgoExpert-Tree-Visualizer</a>
         </li>
     </ul>
 </nav>
