--- a/algoexpert.html
+++ b/algoexpert.html
@@ -17,8 +17,8 @@
             height: 250px;
             resize: none;
             font-size: 25px;
-            background: #012548;
-            color: white;
+            background: white;
+            color: black;
         }
     </style>
 </head>
