--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             height: 80px;
             resize: none;
             font-size: 25px;
-            background: #012548;
-            color: white;
+            background: white;
+            color: black;
         }
+
     </style>
 
 </head>
