--- a/algoexpert.html
+++ b/algoexpert.html
@@ -48,8 +48,13 @@
 <textarea id="input"></textarea>
 <br>
 <br>
-Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button>
-<br>
+<table style="width:100%;">
+    <tr>   
+        <td>
+            <div style="float:right">Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button></div>
+        </td>
+    </tr>
+</table>
 
 <div style="text-align: right;">
     <canvas id="canvas"
