--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
 </nav>
 <textarea id="input"></textarea>
 <br><br>
-Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button>
+<table style="width:100%;">
+    <tr>   
+        <td>
+            <div style="float:right">Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button></div>
+        </td>
+    </tr>
+</table>
     <div style="text-align: center;">
         <canvas id="canvas"
                 width="600"
