--- a/avl.html
+++ b/avl.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>
-        table {width: 100%;}
+        table {width: 95%;margin-left:2%;}
     </style>
 </head>
 <body style="background-color: #012548; color: white" onload="setup();">
