--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             background: white;
             color: black;
         }
-
+        
+        table {
+            width: 95%;margin-left:2%;
+        }
     </style>
 
 </head>
@@ -48,7 +51,7 @@
 </nav>
 <textarea id="input"></textarea>
 <br><br>
-<table style="width:100%;">
+<table>
     <tr>   
         <td>
             <div style="float:right">Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button></div>
