--- a/algoexpert.html
+++ b/algoexpert.html
@@ -20,6 +20,9 @@
             background: white;
             color: black;
         }
+        table {
+            width: 95%;margin-left:2%;
+        }
     </style>
 </head>
 <body style="background-color: #012548; color: white" onload="setup();">
@@ -48,7 +51,7 @@
 <textarea id="input"></textarea>
 <br>
 <br>
-<table style="width:100%;">
+<table>
     <tr>   
         <td>
             <div style="float:right">Zoom: <button id="smallerBtn" type="button"/>-</button> <button id="largerBtn" type="button">+</button></div>
